--- a/src/Style/style.css
+++ b/src/Style/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&family=Roboto:ital,wght@0,300;1,400&display=swap');
+
 :root {
    --button-bg: rgba(0, 0, 0, .2);
    --red-color: #FF4B2B;
@@ -26,6 +28,7 @@
    box-sizing: border-box;
    list-style: none;
    text-decoration: none;
+   font-family: 'Roboto', sans-serif;
 }
 
 body {
