--- a/src/Style/style.css
+++ b/src/Style/style.css
@@ -67,6 +67,17 @@ body {
    display: var(--display-flex);
    align-items: center;
 }
+h2{
+   font-weight: bold;
+  font-size: 1.5em;
+  width: 100%;
+}
+h1 {
+  text-align: center;
+  font-weight: bold;
+  font-size: 2em;
+  width: 100%;
+}
 
 /* image qui bouge */
 .pumpkin img {
@@ -319,6 +330,7 @@ input[type=checkbox],
 
 .hero-btn {
    background: #000;
+   padding: 10px;
 }
 
 
@@ -340,8 +352,8 @@ featured
 .container-Featured {
    width: 90%;
    margin: 0 auto;
-   margin-bottom: 4rem;
    margin-top: 3rem;
+   
 }
 
 /* .container-Featured h1,
@@ -359,7 +371,7 @@ h1 {
 
 .container-Featured .card {
    display: var(--display-flex);
-   height: 100px;
+   /* height: 100px; */
    /* justify-content: var(--justify-content); */
    width: 380px;
    margin-bottom: 20px;
@@ -371,19 +383,6 @@ h1 {
    margin-top: 4rem;
 }
 
-.container-Featured .number {
-   color: var(--color-primary);
-   font-size: 1rem;
-   font-weight: var(--font-bold-400);
-   margin-right: 20px;
-   background-color: #a3a2a2;
-   height: 30px;
-   width: 30px;
-   padding: 5px;
-   display: flex;
-   align-items: center;
-   border-radius: 50%;
-}
 
 .profile-pic {
    font-size: 15px;
@@ -570,7 +569,90 @@ span {
    color: var(--color-primary);
 }
 
-
+/* tables */
+table {
+   /* border: 1px solid #ccc; */
+   border-collapse: collapse;
+   margin: 0;
+   padding: 0;
+   width: 100%;
+   table-layout: fixed;
+ }
+ 
+ table tr {
+   background-color: #f8f8f8;
+   /* border: 1px solid #ddd; */
+   padding: .35em;
+ }
+ 
+ table th,
+ table td {
+   padding: .825em;
+   /* text-align: center; */
+   /* padding: 20px; */
+     text-align: start;
+ }
+ 
+ table th {
+   font-size: .85em;
+   /* letter-spacing: .1em; */
+   text-transform: uppercase;
+ }
+ tr th{
+     background-color: #E3FEFF;
+ }
+ tr:nth-child(even){
+     background-color: #E3FEFF;
+ }
+ 
+ @media screen and (max-width: 600px) {
+   table {
+     border: 0;
+   }
+ 
+   table caption {
+     font-size: 1.3em;
+   }
+   
+   table thead {
+     border: none;
+     clip: rect(0 0 0 0);
+     height: 1px;
+     margin: -1px;
+     overflow: hidden;
+     padding: 0;
+     position: absolute;
+     width: 1px;
+   }
+   
+   table tr {
+     border-bottom: 3px solid #ddd;
+     display: block;
+     margin-bottom: .625em;
+   }
+   
+   table td {
+     border-bottom: 1px solid #ddd;
+     display: block;
+     font-size: .8em;
+     text-align: right;
+   }
+   
+   table td::before {
+     /*
+     * aria-label has no advantage, it won't be read inside a table
+     content: attr(aria-label);
+     */
+     content: attr(data-label);
+     float: left;
+     font-weight: bold;
+     text-transform: uppercase;
+   }
+   
+   table td:last-child {
+     border-bottom: 0;
+   }
+ }
 
 @media (max-width: 768px) {
    .insect img {
